Fix navbar overflow issue
All overflow was hidden, now only the navbar-brand overflow is hidden

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -178,6 +178,6 @@ a:hover img[class*="filter-"] {
 }
 
 /* Make navbar cut off overflow */
-.navbar {
+.navbar .navbar-brand {
 	overflow: hidden;
 }
